--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -23,8 +23,8 @@
 
         <ImageView
             android:id="@+id/imageview_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             app:srcCompat="@drawable/ic_launcher_foreground" />
 
         <TextView
