--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
+        android:id="@+id/relativeItemRight"
         android:gravity="end">
 
         <ImageView
@@ -38,6 +39,17 @@
             android:textSize="18sp" />
 
 
-
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/txt_seen_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/relativeItemRight"
+        android:layout_alignEnd="@+id/relativeItemRight"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="10dp"
+        android:textStyle="italic|bold"
+        android:text="TextView"
+        android:textSize="11sp"/>
 </RelativeLayout>
